--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
     "start": "next start",
-    "lint": "eslint .",
-    "typecheck": "tsc --noEmit"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
@@ -46,8 +43,6 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
-    "genkitx-groq": "^0.25.0",
-    "genkitx-openai": "^0.25.0",
     "lucide-react": "^0.475.0",
     "next": "^15.5.6",
     "patch-package": "^8.0.0",
@@ -67,7 +62,6 @@
     "@types/react-dom": "^18",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
-    "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
