looks like data sets and ai generate doesnt set seasons?

--- a/src/lib/datasets/all-seasons.json
+++ b/src/lib/datasets/all-seasons.json
@@ -9,7 +9,8 @@
             "conditions": {
                 "temperature": "68°F",
                 "sunlight": "6-8 hours",
-                "soil": "Rich, well-drained compost"
+                "soil": "Rich, well-drained compost",
+                "currentSeason": "Spring"
             }
         }
     ],
